fix up margin and spacing, link the projects

--- a/style.css
+++ b/style.css
@@ -151,3 +151,11 @@
 .h5 {
   font-size: 20px;
 }
+
+img {
+  border-radius: 20px;
+}
+
+img:hover {
+  box-shadow: 10px 5px 5px blue;
+}
